# my_fastapi_project

./: .env  docker-compose.yml  nginx.conf
backend/: backend.dockerfile  pyproject.toml
backend/blog/: alembic.ini  start.sh
backend/blog/alembic/: env.py
backend/blog/alembic/versions/: 8d2714091d99_test1.py  d1dc5797c825_test1.py  e813dc083955_test1.py
backend/blog/app/: main.py  worker.py
backend/blog/app/api/: api.py  deps.py
backend/blog/app/api/endpoints/: users.py
backend/blog/app/core/: celery_app.py  celery_config.py  config.py
backend/blog/app/crud/: base.py  crud_user.py
backend/blog/app/db/: __init__.py  base.py  session.py
backend/blog/app/models/: __init__.py  user.py
backend/blog/app/schemas/: user.py
frontend/: frontend.dockerfile
frontend/blog/: package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo
frontend/blog/src/: App.scss  App.tsx
frontend/blog/src/api/: api.ts
