[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["WangZhenyu <wangzhenyu.9264@bytedance.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
SQLAlchemy = "^2.0.35"
PyMySQL = "^1.1.1"
python-dotenv = "^1.0.1"
cryptography = "^39.0.0"
pydantic-settings = "2.5.2"
email-validator = "2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
